fixed completed task overlapping & added userId

--- a/src/app/tasks/new-task/new-task.component.css
+++ b/src/app/tasks/new-task/new-task.component.css
@@ -5,6 +5,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
+  z-index: 1;
   
 }
 
@@ -18,6 +19,7 @@ dialog {
   overflow: hidden;
   padding: 1rem;
   top: 5rem;
+  z-index: 2;
   
 }
 
